detalle de presentacion del showcase

--- a/content/templates/home/index.html
+++ b/content/templates/home/index.html
@@ -84,6 +84,7 @@
 	<script type="text/javascript">
 
 		jQuery(document).ready(function() {
+			$('#tmtkMesa').show();
 			$('#sliderHomeBooks').tinycarousel({ axis: 'y', display: 1} );
 			$('#sliderHomeMusic').tinycarousel({ axis: 'y', display: 1} );
 			$('#sliderHomeMovies').tinycarousel({ axis: 'y', display: 1} );
