--- a/content/templates/home/showcase.html
+++ b/content/templates/home/showcase.html
@@ -29,7 +29,7 @@
             <button onclick="javascript:fillShowCase('Recommended', null,true)">Recomendados</button>
             <button onclick="javascript:fillShowCase('Showcase',null,true)">Bestsellers</button>
 		</div>
-		<div class="tmtkMesa">
+		<div id="tmtkMesa" class="tmtkMesa" style="display:none;">
 			<table border="0" cellpadding="0" cellspacing="0">
 				<tr>
 					<td>
