Modifiable HTML title

--- a/content/templates/page.html
+++ b/content/templates/page.html
@@ -4,8 +4,10 @@
     {% block content_type %}
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     {% endblock %}
-    {% block metaTag -%}
+    {% block head_title -%}
         <title>Tematika.com: Venta de libros, discos, peliculas. Libreria, disqueria online</title>
+    {% endblock %}
+    {% block metaTag -%}
         <meta name="description" content="Tematika.com: Portal de venta por internet de libros, musica (discos), peliculas, pasatiempos. Gran variedad y disponibilidad. Ofertas, promociones. Envios a domicilio a todo el mundo." >
         <meta name="keywords" content="libros, discos, musica, peliculas, agendas, almanaques, calendarios, venta, online, comprar, compra, libreria, disqueria, envios, domicilio, todo el mundo, argentina, tematika, ranking, sucursales, compra segura, mas vendidos, lista de deseos, servicio, afiliados, regalos, promociones, yenny, el ateneo, grupo ilhsa, biografias, sinopsis, capitulo, indice, best seller, banda de sonido, novedades, recomendados, textos escolares" >
         <meta name="distribution" content="Global" >
