--- a/content/templates/subject/index.html
+++ b/content/templates/subject/index.html
@@ -174,7 +174,7 @@
 		/* parse messages */
 		{% include "fragments/messages_parse.js" %}
 		/* Update data */
-	    fillComments('{{ section_name }}');
+	    fillComments('{{ section_name|lower }}');
 	    {% include "fragments/right_menu.js" %}
 	    {% include "fragments/alliance.js" %}
 
