--- a/content/templates/subject/index.html
+++ b/content/templates/subject/index.html
@@ -171,6 +171,7 @@
 
 		jQuery(document).ready(function() {
 			$('#sliderSection').tinycarousel({ axis: 'y', display: 1} );
+			APP.fillCatalog('rank');
 			renderLastVisited('lastvisited');
 		});
 		/* parse messages */
