--- a/content/templates/subject/catalog.html
+++ b/content/templates/subject/catalog.html
@@ -151,7 +151,7 @@
 	              <td class="celdapaginas">
 	                <a href="javascript:APP.fillCatalog(null,0)" class="FAyuda">Anterior</a>
 	                <span class="Ftexto05"> |</span>
-	                <a href="javascript:APP.fillCatalog(null,0)" class="FAyuda"
+	                <a href="javascript:APP.fillCatalog(null,0)" id="catalogPage_0"  class="FAyuda"
 	                    style="font-weight: bolder;">1</a>
 	{% for i in range(1, pages - 1) %}
 	                <a href="javascript:APP.fillCatalog(null,{{ i }})" id="catalogPage_{{ i }}" class="FAyuda">{{ i + 1 }}</a>
