--- a/content/templates/subject/catalog.html
+++ b/content/templates/subject/catalog.html
@@ -149,14 +149,14 @@
 	{%- set pages = 10 -%}
 	            <tr>
 	              <td class="celdapaginas">
-	                <a href="javascript:APP.fillCatalog(null,0)" class="FAyuda">Anterior</a>
+	                <a href="javascript:APP.fillCatalog(null,0)" id="catalogPrev" class="FAyuda">Anterior</a>
 	                <span class="Ftexto05"> |</span>
 	                <a href="javascript:APP.fillCatalog(null,0)" id="catalogPage_0"  class="FAyuda"
 	                    style="font-weight: bolder;">1</a>
 	{% for i in range(1, pages - 1) %}
 	                <a href="javascript:APP.fillCatalog(null,{{ i }})" id="catalogPage_{{ i }}" class="FAyuda">{{ i + 1 }}</a>
 	{% endfor %}
-	                <span class="Ftexto05">| </span><a href="javascript:APP.fillCatalog(null,{{ 1 }})" class="FAyuda">Siguiente</a>
+	                <span class="Ftexto05">| </span><a href="javascript:APP.fillCatalog(null,{{ 1 }})" id="catalogNext" class="FAyuda">Siguiente</a>
 	              </td>
 	            </tr>
 	            </tbody>
