--- a/content/templates/subject/catalog.html
+++ b/content/templates/subject/catalog.html
@@ -153,7 +153,7 @@
 	                <span class="Ftexto05"> |</span>
 	                <a href="javascript:APP.fillCatalog(null,0)" id="catalogPage_0"  class="FAyuda"
 	                    style="font-weight: bolder;">1</a>
-	{% for i in range(1, pages - 1) %}
+	{% for i in range(1, pages) %}
 	                <a href="javascript:APP.fillCatalog(null,{{ i }})" id="catalogPage_{{ i }}" class="FAyuda">{{ i + 1 }}</a>
 	{% endfor %}
 	                <span class="Ftexto05">| </span><a href="javascript:APP.fillCatalog(null,{{ 1 }})" id="catalogNext" class="FAyuda">Siguiente</a>
