--- a/content/templates/subject/showcase.html
+++ b/content/templates/subject/showcase.html
@@ -12,10 +12,14 @@
 		</object>
 	</a>
 	<div class="tmtkMesa-back">
-		<div class="tmtkMesaMenuMod">
-			<div class="tmtkMesaMenuTit"></div>
-            <button onclick="javascript:fillShowCase('Showcase',null,false)">Bestsellers</button>
-            <button onclick="javascript:fillShowCase('Classics', null,false)">Cl&aacute;sicos</button>
+		<div class="tmtkMesaMenuMod"
+                style="text-align: center; margin-top: 20px;">
+            <a href="javascript:fillShowCase('Showcase',null,false);"
+                    style="margin: 0 10px;">
+                <img src="/stage0/images/{{ section_name|lower }}-showcase-bestsellers.png" alt="boton mas vendidos"></a>
+            <a href="javascript:fillShowCase('Classics',null,false);"
+                    style="margin: 0 10px;">
+                <img src="/stage0/images/{{ section_name|lower }}-showcase-classics.png" alt="boton cl&aacute;sicos"></a>
 		</div>
 		<div class="tmtkMesa">
 			<table border="0" cellpadding="0" cellspacing="0">
