--- a/content/templates/home/showcase.html
+++ b/content/templates/home/showcase.html
@@ -24,10 +24,14 @@
 		</object>
 	</a>
 	<div class="tmtkMesa-back">
-		<div class="tmtkMesaMenuMod">
-			<div class="tmtkMesaMenuTit"></div>
-            <button onclick="javascript:fillShowCase('Recommended', null,true)">Recomendados</button>
-            <button onclick="javascript:fillShowCase('Showcase',null,true)">Bestsellers</button>
+		<div class="tmtkMesaMenuMod"
+                style="text-align: center; margin-top: 20px;">
+            <a href="javascript:fillShowCase('Recommended',null,true);"
+                    style="margin: 0 10px;">
+                <img src="/stage0/images/peliculas-showcase-recommended.png" alt="boton mas vendidos"></a>
+            <a href="javascript:fillShowCase('Showcase',null,true);"
+                    style="margin: 0 10px;">
+                <img src="/stage0/images/peliculas-showcase-bestsellers.png" alt="boton cl&aacute;sicos"></a>
 		</div>
 		<div id="tmtkMesa" class="tmtkMesa" style="display:none;">
 			<table border="0" cellpadding="0" cellspacing="0">
