--- a/content/templates/macros/productRelated.html
+++ b/content/templates/macros/productRelated.html
@@ -5,13 +5,13 @@
 		{%- for article in related_data -%}
 		<div class="dRecomendMod">
 		    <div class="tapaContenedor">
-		        <a href="{{ article.LinkBase }}">
+		        <a href="{{ article.LinkBase ~ '.htm' }}">
 		        	<img src="{{ url.images ~ article.CoverSmall }}" class="tapaLibros">
 		        </a>
 		        <div class="tapaInfo" style="visibility: hidden;">
 		    </div>
 		    </div>
-		    <a href="{{ article.LinkBase }}" class="fTitulos">{{ article.Title.decode('utf-8')|e }}</a>
+		    <a href="{{ article.LinkBase ~ '.htm' }}" class="fTitulos">{{ article.Title.decode('utf-8')|e }}</a>
 		    <span>Precio:{{ article.CurrencyCode_desc.decode('utf-8') }}&nbsp;{{ "%.2f"|format(article.PriceAmount) }}.-</span>
 		    <div class="calificacionMod">
 		    	{%- if article.Rating -%}
