bug fix lower section_name

--- a/content/templates/subject/index.html
+++ b/content/templates/subject/index.html
@@ -109,7 +109,7 @@
     <div id="seccionTematika">
     	<div style="float: left; display: block; ">
 			<div style="position: fixed; ">
-				<a href="/{{ section_name }}">
+				<a href="/{{ section_name|lower }}">
 					<img src="{{ url.images }}/imagenes/blank.gif" border="0px" width="210px" height="60px" title="home de {{ section_name }}"/>
 				</a>
 			</div>
