--- a/content/templates/product/index.html
+++ b/content/templates/product/index.html
@@ -1,12 +1,10 @@
 ﻿{% extends "page.html" %}
 
     {%- set title = d.Title.decode('utf-8')|e -%}
-    {%- if d.Authors and d.Authors[0]|length > 0 -%}
+    {%- if d.Authors and d.Authors|length > 0 -%}
         {%- set author = d.Authors[0].ContributorName.decode('utf-8')|e -%}
-        {%- set author_url = d.Authors[0].ContributorURL -%}
     {%- else -%}
         {%- set author = '' -%}
-        {%- set author_url = '' -%}
     {%- endif -%}
     {%- if d.Categoria_Seccion == 1 -%}
         {%- set section_name = 'Libros' -%}
