--- a/content/templates/page.html
+++ b/content/templates/page.html
@@ -4,6 +4,10 @@
     {% block content_type %}
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     {% endblock %}
+
+    {% block head_canonical -%}
+    {% endblock -%}
+
     {% block head_title -%}
         <title>Tematika.com: Venta de libros, discos, peliculas. Libreria, disqueria online</title>
     {% endblock %}
