--- a/content/templates/subject/index.html
+++ b/content/templates/subject/index.html
@@ -13,7 +13,7 @@
 {% endblock %}
 
 {% block head_canonical %}
-    <link rel="canonical" href="http://{{ url.cannonical }}.htm">
+    <link rel="canonical" href="{{ url.cannonical }}.htm">
 {% endblock %}
 
 {% block head_extra %}
