--- a/content/templates/product/index.html
+++ b/content/templates/product/index.html
@@ -34,7 +34,8 @@
     {% elif section == 3 %}
         <link href="/stage0/css/games.css" rel="stylesheet" type="text/css">
     {% endif %}
-    <link rel="canonical" href="http://{{ url.dynamic }}{{ d['LinkBase'] }}.htm">
+
+    <link rel="canonical" href="{{ url.canonical }}.htm">
 
 {% endblock %}
 
