Fix canonical url, again

--- a/content/templates/subject/index.html
+++ b/content/templates/subject/index.html
@@ -13,7 +13,11 @@
 {% endblock %}
 
 {% block head_canonical %}
-    <link rel="canonical" href="{{ url.cannonical }}.htm">
+    {%- set canonical = url.cannonical -%}
+    {%- if not canonical[-1] == '/' -%}
+        {%- set canonical = url.cannonical + '.htm' -%}
+    {%- endif -%}
+    <link rel="canonical" href="http://{{ url.dynamic }}{{ canonical }}">
 {% endblock %}
 
 {% block head_extra %}
