--- a/content/templates/home/index.html
+++ b/content/templates/home/index.html
@@ -1,7 +1,7 @@
 {% extends "page.html" %}
 
 {% block head_canonical %}
-    <link rel="canonical" href="{{ url.cannonical }}.htm">
+    <link rel="canonical" href="http://{{ url.dynamic}}{{ url.cannonical }}">
 {% endblock %}
 
 {% block head_extra %}
