--- a/content/templates/product/index.html
+++ b/content/templates/product/index.html
@@ -35,7 +35,7 @@
         <link href="/stage0/css/games.css" rel="stylesheet" type="text/css">
     {% endif %}
 
-    <link rel="canonical" href="{{ url.canonical }}.htm">
+    <link rel="canonical" href="http://{{ url.dynamic }}{{ url.cannonical }}.htm">
 
 {% endblock %}
 
