--- a/content/templates/fragments/left_menu.html
+++ b/content/templates/fragments/left_menu.html
@@ -10,7 +10,7 @@
 		<a href="/libros" id="panelSeccLibros" title="Libros"><span></span></a>
 		<a href="/musica" id="panelSeccMusica" title="M&uacute;sica"><span></span></a>
 	{%- endif %}
-	{%- if SubjectId == '3' -%}
+	{%- if SubjectId == 3 -%}
 		<a href="/libros" id="panelSeccLibros" title="Libros"><span></span></a>
 		<a href="/musica" id="panelSeccMusica" title="M&uacute;sica"><span></span></a>
 	    <a href="/peliculas" id="panelSeccPeliculas" title="Pel&iacute;culas"><span></span></a>
