elimine el disabledEfectCtrl

--- a/content/templates/subject/showcase.html
+++ b/content/templates/subject/showcase.html
@@ -28,7 +28,7 @@
 						<table border="0" cellpadding="0" cellspacing="0">
 							<tr>
 								<td>
-									<div class="disabledEfectCtrl" id="ctrlDisabled"
+									<div id="ctrlDisabled"
 										style="font-family: 'Tahoma'; text-align: center; vertical-align: middle; font-size: 30px;">
 									</div></td>
 							</tr>
