--- a/content/templates/subject/index.html
+++ b/content/templates/subject/index.html
@@ -62,38 +62,38 @@
 
 {% elif section_name == 'Musica' %}
 
-<li><a id="optBus1"  href="javascript:mostrarBuscarPor('optBus1','optBusqueda','listaBuscador','4','4','En Musica');">T&iacute;tulo</a></li>
+                    <li><a id="optBus1"  href="javascript:APP.searchShowBy('optBus1','optBusqueda','listaBuscador','4','4','En Musica');">T&iacute;tulo</a></li>
 
-<li><a id="optBus2"  href="javascript:mostrarBuscarPor('optBus2','optBusqueda','listaBuscador','4','4','En Musica');">Grupo/Int&eacute;rprete</a></li>
+                    <li><a id="optBus2"  href="javascript:APP.searchShowBy('optBus2','optBusqueda','listaBuscador','4','4','En Musica');">Grupo/Int&eacute;rprete</a></li>
 
-<li><a id="optBus3"  href="javascript:mostrarBuscarPor('optBus3','optBusqueda','listaBuscador','4','4','En Musica');">Sello Discogr&aacute;fico</a></li>
+                    <li><a id="optBus3"  href="javascript:APP.searchShowBy('optBus3','optBusqueda','listaBuscador','4','4','En Musica');">Sello Discogr&aacute;fico</a></li>
 
-<li><a id="optBus4"  href="javascript:mostrarBuscarPor('optBus4','optBusqueda','listaBuscador','4','4','En Musica');">Tema Musical</a></li>
+                    <li><a id="optBus4"  href="javascript:APP.searchShowBy('optBus4','optBusqueda','listaBuscador','4','4','En Musica');">Tema Musical</a></li>
 
-<li><a id="optBus5"  href="javascript:mostrarBuscarPor('optBus5','optBusqueda','listaBuscador','4','4','En Musica');">Palabra Clave</a></li>
+                    <li><a id="optBus5"  href="javascript:APP.searchShowBy('optBus5','optBusqueda','listaBuscador','4','4','En Musica');">Palabra Clave</a></li>
 
 {% elif section_name == 'Peliculas' %}
 
-<li><a id="optBus1"  href="javascript:mostrarBuscarPor('optBus1','optBusqueda','listaBuscador','5','5','En Peliculas');">Título</a></li>
+                    <li><a id="optBus1"  href="javascript:APP.searchShowBy('optBus1','optBusqueda','listaBuscador','5','5','En Peliculas');">Título</a></li>
 
-<li><a id="optBus2"  href="javascript:mostrarBuscarPor('optBus2','optBusqueda','listaBuscador','5','5','En Peliculas');">Director/Actor</a></li>
+                    <li><a id="optBus2"  href="javascript:APP.searchShowBy('optBus2','optBusqueda','listaBuscador','5','5','En Peliculas');">Director/Actor</a></li>
 
-<li><a id="optBus3"  href="javascript:mostrarBuscarPor('optBus3','optBusqueda','listaBuscador','5','5','En Peliculas');">Productora</a></li>
+                    <li><a id="optBus3"  href="javascript:APP.searchShowBy('optBus3','optBusqueda','listaBuscador','5','5','En Peliculas');">Productora</a></li>
 
-<li><a id="optBus5"  href="javascript:mostrarBuscarPor('optBus5','optBusqueda','listaBuscador','5','5','En Peliculas');">Palabra Clave</a></li>
+                    <li><a id="optBus5"  href="javascript:APP.searchShowBy('optBus5','optBusqueda','listaBuscador','5','5','En Peliculas');">Palabra Clave</a></li>
 
 {% elif section_name == 'Pasatiempos' %}
 
 
-<li><a id="optBus1"  href="javascript:mostrarBuscarPor('optBus1','optBusqueda','listaBuscador','3','3','En Pasatiempos');">Título</a></li>
+                    <li><a id="optBus1"  href="javascript:APP.searchShowBy('optBus1','optBusqueda','listaBuscador','3','3','En Pasatiempos');">Título</a></li>
 
-<li><a id="optBus2"  href="javascript:mostrarBuscarPor('optBus2','optBusqueda','listaBuscador','3','3','En Pasatiempos');">Autor</a></li>
+                    <li><a id="optBus2"  href="javascript:APP.searchShowBy('optBus2','optBusqueda','listaBuscador','3','3','En Pasatiempos');">Autor</a></li>
 
-<li><a id="optBus3"  href="javascript:mostrarBuscarPor('optBus3','optBusqueda','listaBuscador','3','3','En Pasatiempos');">Editorial</a></li>
+                    <li><a id="optBus3"  href="javascript:APP.searchShowBy('optBus3','optBusqueda','listaBuscador','3','3','En Pasatiempos');">Editorial</a></li>
 
-<li><a id="optBus4"  href="javascript:mostrarBuscarPor('optBus4','optBusqueda','listaBuscador','3','3','En Pasatiempos');">ISBN</a></li>
+                    <li><a id="optBus4"  href="javascript:APP.searchShowBy('optBus4','optBusqueda','listaBuscador','3','3','En Pasatiempos');">ISBN</a></li>
 
-<li><a id="optBus5"  href="javascript:mostrarBuscarPor('optBus5','optBusqueda','listaBuscador','3','3','En Pasatiempos');">Palabra Clave</a></li>
+                    <li><a id="optBus5"  href="javascript:APP.searchShowBy('optBus5','optBusqueda','listaBuscador','3','3','En Pasatiempos');">Palabra Clave</a></li>
 
 {% endif %}
 
