--- a/content/templates/home/index.html
+++ b/content/templates/home/index.html
@@ -52,6 +52,7 @@
 {%- endblock -%}
 
 {% block canvas_content -%}
+    <div id="barraCentral" class="barraCentral">
     <div id="seccionTematika">
         <div id="showcase">
             {% include "home/showcase.html" %}
@@ -63,6 +64,7 @@
                 style="width: 900px; padding-top: 10px; float: left;">
             {% include "fragments/last_visited.html" %}
         </div>
+    </div>
     </div>
 {%- endblock %}
 
