Change absolute links to relative url

--- a/content/templates/home/index.html
+++ b/content/templates/home/index.html
@@ -5,10 +5,10 @@
 {% endblock %}
 
 {% block head_extra %}
-    <link type="text/css" rel="stylesheet" href="{{ url.data }}/stage0/css/jquery.qtip.min.css">
-    <link type="text/css" rel="stylesheet" href="{{ url.data }}/stage0/css/tinycarousel.css">
-    <link type="text/css" rel="stylesheet" href="{{ url.data }}/stage0/css/showcase.css">
-    <link type="text/css" rel="stylesheet" href="{{ url.data }}/stage0/css/last_visited.css">
+    <link type="text/css" rel="stylesheet" href="/stage0/css/jquery.qtip.min.css">
+    <link type="text/css" rel="stylesheet" href="/stage0/css/tinycarousel.css">
+    <link type="text/css" rel="stylesheet" href="/stage0/css/showcase.css">
+    <link type="text/css" rel="stylesheet" href="/stage0/css/last_visited.css">
 {% endblock %}
 
 {% block search_box %}
@@ -68,10 +68,10 @@
 
 {% block scripts_extra -%}
 	<!-- JQuery Carousel and qTip -->
-	<script type="text/javascript" src="{{ url.data }}/stage0/js/jquery.tinycarousel.js"></script>
-	<script type="text/javascript" src="{{ url.data }}/stage0/js/jquery.qtip.min.js"></script>
+	<script type="text/javascript" src="/stage0/js/jquery.tinycarousel.js"></script>
+	<script type="text/javascript" src="/stage0/js/jquery.qtip.min.js"></script>
 	<!-- JFather -->
-	<script type="text/javascript" src="{{ url.data }}/stage0/js/json2.min.js"></script>
+	<script type="text/javascript" src="/stage0/js/json2.min.js"></script>
 
 	<script type="text/javascript">
 	 	{% include "fragments/serialize.js" %}
@@ -82,8 +82,8 @@
 	</script>
 
 	<!-- Data Scripts -->
-	<script type="text/javascript" src="{{ url.data }}/home-comments.js"></script>
-	<script type="text/javascript" src="{{ url.data }}/home-showcase.js"></script>
+	<script type="text/javascript" src="/home-comments.js"></script>
+	<script type="text/javascript" src="/home-showcase.js"></script>
 
 	<script type="text/javascript">
 
