Add div id for popup block search

--- a/content/templates/subject/showcase.html
+++ b/content/templates/subject/showcase.html
@@ -21,7 +21,7 @@
                     style="margin: 0 10px;">
                 <img src="/stage0/images/{{ section_name|lower }}-showcase-classics.png" alt="boton cl&aacute;sicos"></a>
 		</div>
-		<div class="tmtkMesa">
+		<div id="tmtkMesa" class="tmtkMesa">
 			<table border="0" cellpadding="0" cellspacing="0">
 				<tr>
 					<td>
