--- a/content/templates/subject/index.html
+++ b/content/templates/subject/index.html
@@ -103,7 +103,7 @@
         </ul>
         <input id="txtBuscar" name="buscadorTxtField" type="text" value=""
             class="hBuscTxtF"
-            onkeypress="javascript: if(APP.pressedEnter(event)) APP.setSearch(document.getElementById('optBusqueda').innerHTML, document.getElementById('txtBuscar').value,document.getElementById('idSeccion').value,document.getElementById('idSeccionPropia').value,document.getElementById('seccionBusqueda').value);">
+            onkeypress="javascript: if(APP.pressedEnter(event)) APP.setSearch(escape(document.getElementById('optBusqueda').innerHTML), document.getElementById('txtBuscar').value,document.getElementById('idSeccion').value,document.getElementById('idSeccionPropia').value,document.getElementById('seccionBusqueda').value);">
         <input type="hidden" id="seccionBusqueda"
                 value="En Tematika.com">
         <input type="hidden" id="idSeccionPropia" value="1">
